# 2023_spring_task

./: CMakeLists.txt  README.md  main.cpp  test.in  test.out
Headers/: City.h  Game.h  Headquarters.h  Map.h  Warriors.h  Weapons.h
Sources/: City.cpp  Game.cpp  Headquarters.cpp  Map.cpp  Warrior.cpp
